@@ -1,4 +1,4 @@
-# Copyright 1992, 1994, 1995, 1996, 1997, 1999, 2000, 2002, 2003
+# Copyright 1992, 1994, 1995, 1996, 1997, 1999, 2000, 2002, 2003, 2004
 # Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -197,7 +197,6 @@ proc do_tests {} {
     global srcdir
     global binfile
     global gdb_prompt
-    global supports_template_debugging
 
     set prms_id 0
     set bug_id 0
@@ -208,11 +207,6 @@ proc do_tests {} {
     gdb_start
     gdb_reinitialize_dir $srcdir/$subdir
     gdb_load $binfile
-
-    if { !$supports_template_debugging } {
-	warning "compiler lacks debugging info for templates; tests suppressed." 0
-	return
-    }
 
     runto_main
 
